namespace SIS
{
    public enum ApplicationStatus
    {
        SUBMITTED,
        APPROVED,
        REJECTED
    }
}