namespace SIS
{
    public enum InternshipStatus
    {
        OPEN,
        WITHDRAWN,
        ASSIGNED, 
        COMPLETED
    }
}