namespace SIS
{
    public class Minor
    {
        private string moduleName;
    }
}