namespace SIS
{
    public enum InternshipCategory
    {
        MINOR,
        INTERMEDIATE,
        GRADUATION
    }
}