namespace SIS
{
    public enum Semester
    {
        One = 1,
        Two = 2
    }
}