interface IUser
{
    void ShowMenu();
    bool Login();
}