@startuml SIS

interface IUser {
    +Login() : bool
    +ShowMenu() : void
}

interface IPerson {
    -firstName : string
    -lastName : string
    -email : string
    -phoneNumber : string
    
    +GetFullName() : string
}

class Student {
    -studentNumber : uint
    -applications : List<Application>
    -assignment : Assignment

    +Student(studentNumber: uint, firstName: string, lastName: string, email : string, phoneNumber:string)

    +GetAvailableInternship(period: Period, category: InternshipCategory) : List<Internship>
    +ApplyForInternship(internship: Internship) : Application
    +GetApplications() : List<Application>
    +HasApplied(period : Period) : bool

    +Login(): bool
    +ShowMenu(): void
}

class Coordinator {
    +Coordinator(firstName : string, lastName : string, email : string, phoneNumber : string)

    +ProcessAssignment(application : Application) : bool
    +AssignStudentToInternship(student : Student, internship : Internship) : void
    +MarkInternshipCompleted(internship : Internship, finalGrade : float) : void

    +AddOrganisation(org : Organization) : bool
    +RemoveOrganisation(orgId : int) : bool
    +ListOrganisations() : List<Organization>

    +AddInternship(internship : Internship, orgId : int) : void
    +WithdrawInternship(internshipId : int) : void
    +ListInternships(period : Period, category : InternshipCategory) : List<Internship>
    +GetContactPersons(internshipId : int) : List<ContactPerson>

    +Login(): bool
    +ShowMenu(): void
}

IUser <|.. Student
IUser <|.. Coordinator

IPerson <|-- Student
IPerson <|-- Coordinator

class Organization {
    -id: int
    -name : string
    -address : string
    -phoneNumber : string
    -email : string
    -url : string
    +GetIdentifier() : int
}

class ContactPerson {
    -functionTitle : string
    -departmentName : string
    +ContactPerson(firstName : string, lastName : string, email : string, phoneNumber : string, functionTitle : string, departmentName : string)
    +GetContactInfo() : string
}
IPerson <|-- ContactPerson

class Company
class ResearchGroup
class EducationalInstitute

Organization <|-- Company
Organization <|-- ResearchGroup
Organization <|-- EducationalInstitute

enum Semester {
    One
    Two
}

class Period {
    +year : int
    +semester : Semester
}

enum InternshipCategory {
    INTERMEDIATE
    MINOR
    GRADUATION
}

class Internship {
    +id : int
    +dateOfSubmission : DateTime
    +projectTitle : string
    +shortDescription : string
    +longDescription : string
    +finalGrade : float
    +status : InternshipStatus
    +capacity : int
    +assignedStudents : List<Student>

    +GetOverview() : string
}

enum InternshipStatus {
    OPEN
    WITHDRAWN
    ASSIGNED
    COMPLETED
}

Internship --> Period
Internship --> Organization
Internship "1" o-- "1..*" ContactPerson : contactPersons

Organization "1" o-- "0..*" Internship : internships


class Application {
    +applicationId : int
    +submittedAt : DateTime
    +status : ApplicationStatus
    +motivation : string

    +GetSummary() : string
}

enum ApplicationStatus {
    SUBMITTED
    APPROVED
    REJECTED
}

Student "1" o-- "0..*" Application : applications
Application "*" --> "1" Internship

class Assignment {
    -description : string
    +GetDescription() : string
}

Assignment <|-- ResearchAssignment
Assignment <|-- MinorAssignment
Assignment <|-- EngineeringAssignment

class ResearchAssignment
class MinorAssignment {
    -minor : Minor
}
class EngineeringAssignment

Student "1" --> "0..1" Assignment : assignment

class Minor {
    -moduleName : string
}

Minor <|-- MinorInternship
Minor o-- MinorAssignment

class IntermediateInternship
class MinorInternship
class GraduationInternship

Internship <|-- IntermediateInternship
Internship <|-- MinorInternship
Internship <|-- GraduationInternship

@enduml
